# BETACLARITY

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
examples/: inference.py  train.py
interface/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  Dockerfile.slim  Makefile  docker-compose.gpu.yml  docker-compose.yml  index.html  package.json  webpack.config.js
interface/backend/: .dockerignore  Dockerfile  Dockerfile.fast  app.py  device_monitor.py  download_samples.py  requirements.txt
interface/components/: DICOMViewer.jsx  Header.jsx  Sidebar.jsx  styles.css
interface/components/styles/: dicomViewer.css  main.css
interface/public/: backendconfig.js  index.html
interface/src/: App.css  App.js  Auth.css  BetaClarityLogin.css  BetaClarityLogin.jsx  BetaClarityPage.js  BetaClarityRegister.js  BetaClaritySignup.js  ExportComponent.js  index.css  index.html  index.js  styles.css
interface/src/components/: AppleStyleHeader.js  BackendService.js
quantized/: README.md  export_betasr.py  inference_onnx.py
scripts/: run_native_macos.sh
src/betaclarity/: __init__.py
src/betaclarity/core/: __init__.py
src/betaclarity/core/configs/: __init__.py
src/betaclarity/core/datasets/: __init__.py  data_utils.py  modality_dataset.py
src/betaclarity/core/models/: __init__.py  latent_diffusion.py
src/betaclarity/core/scripts/: __init__.py
src/betaclarity/core/trainers/: __init__.py  diffusion_trainer.py
src/betaclarity/core/utils/: __init__.py  file_utils.py  logging_utils.py  visualization.py
tests/: test_imports.py  test_model.py  test_onnx_inference_script.py  test_pad_channels.py
